@@ -10,6 +10,9 @@ Projected release date: 2013-11-24
 Core and Builtins
 -----------------
 
+- Issue #19428: zipimport now handles errors when reading truncated or invalid
+  ZIP archive.
+
 - Issue #18408: Add a new PyFrame_FastToLocalsWithError() function to handle
   exceptions when merging fast locals into f_locals of a frame.
   PyEval_GetLocals() now raises an exception and return NULL on failure.
